[S] Fix flexbox alignment

--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -39,6 +39,7 @@ $c-highlight: #ff7878
   display: flex
   flex-flow: column
   height: 100%
+  min-height: 0
 
 .mh0
   min-height: 0
@@ -61,6 +62,7 @@ $c-highlight: #ff7878
 
 .f-grow1
   flex-grow: 1
+  min-height: 0
 
 .f-no-shrink
   flex-shrink: 0
